# DM-MC02-Chassis-controller

./: .agent.md  .gitignore  CLAUDE.md  README.md
.github/skills/vofa-uart-debug/: SKILL.md
0.cubeMX配置参考/0.cubeMX配置参考/: .mxproject  CLAUDE.md  STM32H743.ioc
0.cubeMX配置参考/0.cubeMX配置参考/Core/Inc/: stm32h7xx_it.h
0.cubeMX配置参考/0.cubeMX配置参考/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
0.cubeMX配置参考/0.cubeMX配置参考/Drivers/User/Inc/: adc.h  crsf.h  crsf_task.h  headfile.h  led.h  motor.h  oled.h  oledfont.h  pid.h  usart.h  vofa.h
0.cubeMX配置参考/0.cubeMX配置参考/Drivers/User/Src/: adc.c  crsf.c  crsf_protocol.c  crsf_task.c  led.c  motor.c  oled.c  pid.c  usart.c  vofa.c
0.cubeMX配置参考/0.cubeMX配置参考/MDK-ARM/: JLinkLog.txt  STM32H743.uvprojx
0.cubeMX配置参考/0.cubeMX配置参考/MDK-ARM/RTE/_STM32H743/: RTE_Components.h
0.cubeMX配置参考/0.cubeMX配置参考/MDK-ARM/STM32H743/: STM32H743.build_log.htm  STM32H743.htm  STM32H743.lnp  STM32H743_STM32H743.dep
Ctrboard-H7-bottom-core/: .agent.md  .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  Ctrboard-H7-bottom-core.ioc  DM-MC02.ioc  STM32H723XG_FLASH.ld  startup_stm32h723xx.s
Ctrboard-H7-bottom-core/.github/prompts/: h723-baremetal-migration.prompt.md
Ctrboard-H7-bottom-core/.github/skills/h723-singlechip-baremetal-migration/: SKILL.md
Ctrboard-H7-bottom-core/.github/skills/h723-singlechip-baremetal-migration/references/: workflow-checklist.md
Ctrboard-H7-bottom-core/Core/Inc/: adc.h  gpio.h  main.h  octospi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Ctrboard-H7-bottom-core/Core/Inc/app/: app_tasks.h  buzzer_task.h  can_protocol.h  can_task.h  comm_dispatcher.h  comm_uart_rx.h  comm_usb_rx.h  crsf_protocol.h  crsf_task.h  imu_task.h  key_task.h  led_task.h  motor_control_task.h  oled_debug.h  protocol_adapter.h  protocol_ids.h  protocol_legacy_v1.h  protocol_unified_v0.h  rs485_task.h  safety_task.h  usb_task.h  vofa_debug.h
Ctrboard-H7-bottom-core/Core/Inc/drivers/: fdcan.h  main.h  tim.h  usart.h
Ctrboard-H7-bottom-core/Core/Src/: adc.c  dma.c  fdcan.c  freertos.c  gpio.c  i2c.c  main.c  octospi.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  syscalls.c  tim.c  usart.c
Ctrboard-H7-bottom-core/Core/Src/app/: app_tasks.c  buzzer_task.c  can_protocol.c  can_task.c  cmsis_os2_shim.c  comm_dispatcher.c  comm_uart_rx.c  comm_usb_rx.c  crsf_protocol.c  crsf_task.c  imu_task.c  key_task.c  led_task.c  motor_control_task.c  oled_debug.c  protocol_adapter.c  protocol_legacy_v1.c  protocol_unified_v0.c  rs485_task.c  safety_task.c  usb_task.c  vofa_debug.c
Ctrboard-H7-bottom-core/Core/Src/drivers/: adc.c  fdcan.c  gpio.c.bak  main.c  spi.c  tim.c  usart.c  usb_otg.c
Ctrboard-H7-bottom-core/LinkerScripts/: STM32H723RBTx_FLASH.ld
Ctrboard-H7-bottom-core/MDK-ARM/: DM-MC02.uvprojx
Ctrboard-H7-bottom-core/cmake/: toolchain-arm-none-eabi.cmake
Ctrboard-H7-bottom-core/cmake/stm32cubemx/: CMakeLists.txt
Ctrboard-H7-bottom-core/docs/: C8T6_can_protocol.c  C8T6_can_protocol.h  h723_baremetal_test_plan.md
Ctrboard-H7-bottom-core/tests/: CMakeLists.txt  app_tasks_chain_test.c  motor_control_task_test.c  protocol_smoke_test.c
Ctrboard-H7-bottom-core/tests/stubs/: buzzer_task.h  can_task.h  cmsis_os2.h  comm_dispatcher.h  crsf_task.h  imu_task.h  led_task.h  main.h  rs485_task.h  safety_task.h  tim.h  usb_task.h
docs/: crsf头文件.md  调试手册.md  进度记录.md
skills/: C8T6电流采集需求文档.md  CRSF接收排查技能.md  需求文档.md
